--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,10 @@
   @apply flex flex-col md:w-[36rem] md:self-center [&>*]:border [&>*]:border-l-4 gap-8 mb-8 [&>*]:p-6  [&>*]:rounded-lg;
 }
 
+.question {
+  @apply border border-l-4 gap-8 mb-8 p-6  rounded-lg bg-white;
+}
+
 .form-header {
   @apply border-t-8  border-t-purple-800 rounded-lg p-6;
 }
